kubernetes-manifests/web-ctf-container/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-ctf-container
  labels:
    demo: roadshow
    repo: demo-apps
